--- a/S13.html
+++ b/S13.html
@@ -1,39 +1,48 @@
-<!DOCTYPE html>
-<html>
-
+<html lang="en">
 <head>
-    <title>AJAX Example</title>
-    <script>
-        function sendRequest() {
-            var name = document.getElementById("name").value;
-            var message = document.getElementById("message");
-            if (name == "") {
-                message.innerHTML = "Stranger, please tell me your name!";
-            } else {
-                var xhr = new XMLHttpRequest();
-                xhr.onreadystatechange = function() {
-                    if (this.readyState == 4 && this.status == 200) {
-                        var response = this.responseText;
-
-                        if (response == "Hello !") {
-                            document.getElementById("message").innerHTML = " Hello " + name + "!";
-                        }
-                        else 
-                            document.getElementById("message").innerHTML = " Unknown " +name+ "!!";
-                        }
-                    };
-                    xhr.open("GET", "S13.php?name=" + name, true);
-                    xhr.send();
-                }
-            }
-    </script>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Greetings</title>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
-
 <body>
-    <h1>AJAX Example</h1>
-    Enter your name : <input type="text" id="name" onkeyup="sendRequest()">
-    <p id="message"></p>
-    
-</body>
 
+<label for="nameInput">Enter your name:</label>
+<input type="text" id="nameInput">
+
+
+<div id="response"></div>
+
+<script>
+    $(document).ready(function(){
+    var typingTimer;
+    var doneTypingInterval = 500;
+    
+    $('#nameInput').keyup(function()
+    {
+        clearTimeout(typingTimer);
+        if ($('#nameInput').val()) 
+            typingTimer = setTimeout(sendRequest, doneTypingInterval);
+        else 
+            $('#response').text("Stranger, please tell me your name!");
+    });
+});
+
+function sendRequest() {
+    var name = $('#nameInput').val();
+    $.ajax({
+        url: 'a12.php', 
+        type: 'POST',
+        data: {name: name},
+        success: function(response) {
+            $('#response').text(response);
+        },
+        error: function() {
+            $('#response').text("Error occurred while processing your request.");
+        }
+    });
+}
+</script>
+</body>
 </html>
+
