--- a/S13.html
+++ b/S13.html
@@ -31,7 +31,7 @@
 function sendRequest() {
     var name = $('#nameInput').val();
     $.ajax({
-        url: 'a12.php', 
+        url: 'S13.php', 
         type: 'POST',
         data: {name: name},
         success: function(response) {
