--- a/S10.html
+++ b/S10.html
@@ -1,12 +1,12 @@
 <html>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <body>
-  <img id="image" src="img.jpeg">
+  <p id="para">hello  </p>
 </body>
 <script>
     $(document).ready(function(){
-    $("#image").before("<p>Text before the image.</p>");
-    $("#image").after("<p>Text after the image.</p>");
+    $("#para").before("<p>Text before the para.</p>");
+    $("#para").after("<p>Text after the para.</p>");
 });
 </script>
 </html>
